--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="img_src/jap.png" type="image/x-icon">
+    <title>アホ死ね</title>
 </head>
 <body>
-    <h1>こんなの見てる暇あったら寝ろ</h1>
+    <details>
+        <summary>Contact me</summary>
+        <p>Discord: Ennui#9999 (You can not send friend requests)</p>
+        <a href="https://discord.gg/chiikawa">My Discord server</a>
+        <br>
+        <a href="https://www.youtube.com/channel/UC6Idca9673aiHmKPQTCElyQ">Youtube</a>
+        <br>
+        <a href="https://www.instagram.com/ennuilw9751/">Instagram</a>
+        <br>
+        <a href="https://github.com/wuliao97">Github</a>
+        <br>
+        <a href="https://github.com/Ennuilw">Github (ALT)</a>
+        <br>
+        <a href=""></a>    
+    </details>
+
+
+<nav>test</nav>
+
 </body>
 </html>
