--- a/index.html
+++ b/index.html
@@ -8,24 +8,34 @@
     <title>アホ死ね</title>
 </head>
 <body>
+    <header>
+        <h1>てｓｔ</h1>
+    </header>
+
+
+    <video controls  src="https://drive.google.com/file/d/1m4wvRFdHUTzlUMiWaNAMxCI-DAhtf9DT/view?usp=share_link">ブラックラグーン見ようね</video>
+
     <details>
         <summary>Contact me</summary>
-        <p>Discord: Ennui#9999 (You can not send friend requests)</p>
-        <a href="https://discord.gg/chiikawa">My Discord server</a>
-        <br>
-        <a href="https://www.youtube.com/channel/UC6Idca9673aiHmKPQTCElyQ">Youtube</a>
-        <br>
-        <a href="https://www.instagram.com/ennuilw9751/">Instagram</a>
-        <br>
-        <a href="https://github.com/wuliao97">Github</a>
-        <br>
-        <a href="https://github.com/Ennuilw">Github (ALT)</a>
-        <br>
-        <a href=""></a>    
+            <section style="background-color: azure;">
+                <ul>
+                    <li><a target="_blank">Discord: Ennui#9999 <span style="color:red"><i>(You can not send friend requests)</i></span></a>                </li>
+                    <li><a target="_blank" href="https://discord.gg/chiikawa">My Discord server</a></li>
+                    <li><a target="_blank" href="https://www.youtube.com/channel/UC6Idca9673aiHmKPQTCElyQ">Youtube</a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/ennuilw9751/">Instagram</a></li>
+                    <li><a target="_blank" href="https://github.com/wuliao97">Github</a></li>
+                    <li><a target="_blank" href="https://github.com/Ennuilw">Github (ALT)</a></li>
+                </ul>
+            </section>
     </details>
 
-
-<nav>test</nav>
+    <section>
+        <section>
+            <a href=""></a>
+            <h1></h1>
+            <p></p>
+        </section>
+    </section>
 
 </body>
 </html>
