--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
 
-    <video controls  src="https://drive.google.com/file/d/1m4wvRFdHUTzlUMiWaNAMxCI-DAhtf9DT/view?usp=share_link">ブラックラグーン見ようね</video>
+    <video controls  src="https://drive.google.com/file/d/1m4wvRFdHUTzlUMiWaNAMxCI-DAhtf9DT/view?usp=share_link"></video>
 
     <details>
         <summary>Contact me</summary>
